# pyfaulttolerance

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: qodana_code_quality.yml  test.yml
pyfaulttolerance/: circuit_breaker.py  timeout.py
tests/: run_tests.py  test_bulkhead.py  test_circuit_breaker.py  test_fallback.py  test_timeout.py
