[project]
name = "pyfaulttolerance"
version = "0.1.0"
description = "Microframework de tolerância a falhas inspirado no SmallRye Fault Tolerance"
authors = [{ name = "Fabio Gomes Rocha", email = "gomesrocha[at]email[dot]com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "setuptools>=80.4.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
